--- a/lang/zh_TW.json
+++ b/lang/zh_TW.json
@@ -6,19 +6,19 @@
     "404 - The requested page was not found.": "404 - 找不到網頁。",
     "500 - There has been an internal server error.": "500 - 內部伺服器錯誤。",
     "A new verification link has been sent to the email address you provided during registration.": "新的驗證連結已發送到您註冊時提供的電子郵件地址。",
-    "Account Active": "帳戶啟用",
-    "Account Settings": "帳戶設定",
+    "Account Active": "帳號啟用",
+    "Account Settings": "帳號設定",
     "Action": "動作",
     "Activity": "活動",
-    "Add additional security to your account using two-factor authentication.": "使用兩步驟驗證為您的帳戶提高額外的安全性。",
+    "Add additional security to your account using two-factor authentication.": "使用兩步驟驗證為您的帳號提高額外的安全性。",
     "Add Role": "新增角色",
     "Add Roles": "新增角色",
     "Add Row": "新增行",
     "Add Users": "新增使用者",
-    "Adding Two-Step Verification means that even if your password gets stolen, your account will remain secure.": "新增兩步驟驗證意味著即使您的密碼被盜，您的帳戶也將保持安全。",
+    "Adding Two-Step Verification means that even if your password gets stolen, your account will remain secure.": "新增兩步驟驗證意味著即使您的密碼被盜，您的帳號也將保持安全。",
     "Admin Settings": "管理者設定",
     "Advanced Search": "進階搜尋",
-    "After you turn on Two-Step Verification for your account, signing in will be a little different: You will enter your password, as usual.": "為您的帳戶啟用兩步驟驗證後，登入會略有不同：您將像往常一樣輸入密碼。",
+    "After you turn on Two-Step Verification for your account, signing in will be a little different: You will enter your password, as usual.": "為您的帳號啟用兩步驟驗證後，登入會略有不同：您將像往常一樣輸入密碼。",
     "Already registered?": "已註冊？",
     "another invite email": "另一封邀請電子郵件",
     "App": "應用程式",
@@ -33,8 +33,8 @@
     "at least one uppercase letter": "至少有一個大寫字母",
     "Audit Trail": "稽核軌跡",
     "Audit Trails": "稽核軌跡",
-    "Authenticator apps generate random codes that you can use to sign in. They do not have access to your password or account information": "驗證器應用程式會產生可用於登入的隨機碼。它們無法存取您的密碼或帳戶資訊",
-    "Authenticator apps generate random codes that you can use to sign in. They do not have access to your password or account information.": "驗證器應用程式會產生可用於登入的隨機碼。它們無法存取您的密碼或帳戶資訊。",
+    "Authenticator apps generate random codes that you can use to sign in. They do not have access to your password or account information": "驗證器應用程式會產生可用於登入的隨機碼。它們無法存取您的密碼或帳號資訊",
+    "Authenticator apps generate random codes that you can use to sign in. They do not have access to your password or account information.": "驗證器應用程式會產生可用於登入的隨機碼。它們無法存取您的密碼或帳號資訊。",
     "By default only Admin have full access, additional roles will need permissions applying to them by editing the roles below.": "預設情況下，只有管理員擁有完全存取權限，其他角色需要通過編輯以下角色來套用權限。",
     "Cancel": "取消",
     "Change Password": "更改密碼",
@@ -57,8 +57,8 @@
     "Delete User": "刪除使用者",
     "Delete Users": "刪除使用者",
     "Edit": "編輯",
-    "Edit Account": "編輯帳戶",
-    "Edit Own Account": "編輯個人帳戶",
+    "Edit Account": "編輯帳號",
+    "Edit Own Account": "編輯個人帳號",
     "Edit Role": "編輯角色",
     "Edit Roles": "編輯角色",
     "Edit User": "編輯使用者",
@@ -66,7 +66,7 @@
     "Email": "電子郵件",
     "Email Password Reset Link": "電子郵件密碼重置連結",
     "Enforce 2Fa": "強制執行兩步驟驗證",
-    "Ensure your account is using a long, random password to stay secure.": "確保你的帳戶使用足夠長且隨機的密碼來確保安全。",
+    "Ensure your account is using a long, random password to stay secure.": "確保你的帳號使用足夠長且隨機的密碼來確保安全。",
     "Force 2 factor authentication for all users on login.": "對所有登入使用者強制進行兩步驟驗證。",
     "Forgot Password": "忘記密碼",
     "Forgot your password?": "忘記密碼？",
@@ -184,6 +184,6 @@
     "Yes, Send Email": "是的，寄送電子郵件",
     "You are logged in!": "您已登入！",
     "Your 2-Factor Authentication is in place, to remove this click the button below.": "您的兩步驟驗證已就位，要刪除此身份驗證，請點擊下面的按鈕。",
-    "Your account has been deactivated. You cannot login.": "您的帳戶已被停用。您無法登入。",
+    "Your account has been deactivated. You cannot login.": "您的帳號已被停用。您無法登入。",
     "Your current IP address is": "您目前的 IP 位址是"
 }
